Changed parent of popovers to correct the size on firefox

--- a/src/index.sass
+++ b/src/index.sass
@@ -50,7 +50,7 @@ $circleColor: #f6d7e7
       width: $circleSize
       height: $circleSize
       background-color: white
-      border: 1px solid $circleColor
+      border: 2px solid $circleColor
       border-radius: $circleSize
       @include box-sizing(border-box)
   > .inner
